--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -7,7 +7,7 @@
         <title>{% block title %}{% endblock %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="{% static "css/blog.css" %}">
+        <link href="{% static "css/blog.css" %}" rel="stylesheet">
     </head>
     <body>
        <div id="content">
