--- a/mysite/blog/templates/blog/post/detail.html
+++ b/mysite/blog/templates/blog/post/detail.html
@@ -7,4 +7,8 @@
   Published by {{ post.author }} on {{ post.publish }}
  </p>
  {{ post.body|linebreaks }}
+ <p>
+  <a  href="{% url "blog:post_share" post.id %}">Share this post.
+  </a>
+ </p>
 {% endblock %}
