Adding the tags to the template and insert the data in the taggit .

--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -9,6 +9,7 @@
     <a href="{{ post.get_absolute_url }}">{{post.title}}
     </a>
     </h2>
+    <p class='tags'>Tags : {{ post.tags.all|join:","}}</p>
     <p class="date">
     Published {{post.publish}} by {{post.author}}
     </p>
