Added the similar posts in the template.

--- a/mysite/blog/templates/blog/post/detail.html
+++ b/mysite/blog/templates/blog/post/detail.html
@@ -14,7 +14,7 @@
 
  <!---  Similar post --->
  <h2>Similar Posts</h2>
- {% for post in similar_post %}
+ {% for post in similar_posts %}
  <p>
  <a href="{{ post.get_absolute_url}}">
  {{post.title}}
