--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -18,6 +19,7 @@
        <div id="sidebar">
          <h2>My blog.</h2>
          <p>This is my blog.</p>
+         I have written {{% total_posts %}} so far .
        </div>
        
     </body>
