--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -19,7 +19,7 @@
        <div id="sidebar">
          <h2>My blog.</h2>
          <p>This is my blog.</p>
-         I have written {{% total_posts %}} so far .
+         I have written {% total_posts %} posts so far .
        </div>
        
     </body>
