Successfully added the latest posts in template in inclusion_tags custom tags .

--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -20,6 +20,8 @@
          <h2>My blog.</h2>
          <p>This is my blog.</p>
          I have written {% total_posts %} posts so far .
+         <h3>latest posts</h3>
+         {% show_latest_posts 3%}
        </div>
        
     </body>
