--- a/mysite/blog/templates/blog/post/detail.html
+++ b/mysite/blog/templates/blog/post/detail.html
@@ -1,4 +1,5 @@
 {% extends "blog\base.html" %}
+{% load blog_tags %}
 {% block title%}{{post.title}}{% endblock %}
 
 {% block content %}
@@ -6,7 +7,7 @@
  <p class="date">
   Published by {{ post.author }} on {{ post.publish }}
  </p>
- {{ post.body|linebreaks }}
+ {{ post.body|markdown }}
  <p>
   <a  href="{% url "blog:post_share" post.id %}">Share this post.
   </a>
