--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -20,6 +20,10 @@
          <h2>My blog.</h2>
          <p>This is my blog.</p>
          I have written {% total_posts %} posts so far .
+         <p>
+         <a href="{% url:'blog:post_feed' %}">Subcribe to my rss feed.
+         </a>
+         </p>
          <h3>latest posts</h3>
          {% show_latest_posts 3%}
          <h2>Most commented posts.</h2>
