--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -21,7 +21,7 @@
          <p>This is my blog.</p>
          I have written {% total_posts %} posts so far .
          <p>
-         <a href="{% url:'blog:post_feed' %}">Subcribe to my rss feed.
+         <a href="{% url 'blog:post_feed' %}">Subcribe to my rss feed.
          </a>
          </p>
          <h3>latest posts</h3>
